added background color change

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -22,6 +22,7 @@
     </section>
     <section>
     <table>
+        <p class="cool">this is cool</p>
         <thead>
         <tr id="tr-text">
             <th>Task</th>
